# OpenXLSX-NX

./: .codegraphrc  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  COMPATIBILITY_REFACTOR.md  GEMINI.md  Missing_Excel_Functions_Checklist.md  README.md  run_tests_individually.sh
.github/workflows/: ci.yml  doxygen-pages.yml  release.yml
Benchmarks/: Benchmark.cpp
Documentation/: ChartTutorial.md  CommentsTutorial.md  PivotTableTutorial.md  SlicerTutorial.md  StreamReaderTutorial.md  StreamWriterTutorial.md
Examples/: slicer_demo.cpp
OpenXLSX/: OpenXLSX.hpp
OpenXLSX/headers/: IZipArchive.hpp  XLCalculationEngine.hpp  XLCell.hpp  XLCellValue.hpp  XLChart.hpp  XLChartsheet.hpp  XLColor.hpp  XLColumn.hpp  XLCommandQuery.hpp  XLComments.hpp  XLConditionalFormatting.hpp  XLConstants.hpp  XLContentTypes.hpp  XLCrypto.hpp  XLDataValidation.hpp  XLDateTime.hpp  XLDocument.hpp  XLDrawing.hpp  XLEMUConverter.hpp  XLEvaluationContext.hpp  XLFormula.hpp  XLFormulaEngine.hpp  XLFormulaFunction.hpp  XLFormulaFunctionsInternal.hpp  XLFormulaRegistry.hpp  XLFormulaUtils.hpp  XLImageOptions.hpp  XLImageParser.hpp  XLMergeCells.hpp  XLPackagePartFactory.hpp  XLPackageServices.hpp  XLPageSetup.hpp  XLPivotTable.hpp  XLProperties.hpp  XLRelationships.hpp  XLRow.hpp  XLRowData.hpp  XLSharedStringTable.hpp  XLSharedStrings.hpp  XLSheet.hpp  (+29 more)
OpenXLSX/sources/: XLCalculationEngine.cpp  XLCell.cpp  XLCellIterator.cpp  XLCellReference.cpp  XLCellValue.cpp  XLChart.cpp  XLChart_Init.cpp  XLChart_Internal.hpp  XLChart_Templates.hpp  XLChartsheet.cpp  XLColor.cpp  XLColumn.cpp  XLComments.cpp  XLConditionalFormatting.cpp  XLConditionalFormatting_Models.cpp  XLConditionalFormatting_Rules.cpp  XLConditionalFormatting_Types.cpp  XLContentTypes.cpp  XLCrypto.cpp  XLDataValidation.cpp  XLDateTime.cpp  XLDocument.cpp  XLDocument_Commands.cpp  XLDocument_PackageParts.cpp  XLDocument_PivotSlicer.cpp  XLDocument_Properties.cpp  XLDocument_Templates.hpp  XLDocument_Validate.cpp  XLDrawing.cpp  XLEvaluationContext.cpp  XLFormula.cpp  XLFormulaArray.cpp  XLFormulaDateTime.cpp  XLFormulaEngine.cpp  XLFormulaEngineering.cpp  XLFormulaFinancial.cpp  XLFormulaFunctions.cpp  XLFormulaFunctions2.cpp  XLFormulaInfo.cpp  XLFormulaLogical.cpp  (+46 more)
Tests/: MockPackagePorts.hpp  TestHelpers.hpp  excelize_macro.xlsm  shared_formula_test.xlsx  testXLAdvancedLayout.cpp  testXLAutoFilter.cpp  testXLAutoFit.cpp  testXLBoundaries.cpp  testXLCalculationEngine.cpp  testXLCell.cpp  testXLCellRange.cpp  testXLCellReference.cpp  testXLCellValue.cpp  testXLCellValueProxy.cpp  testXLChart.cpp  testXLChartAdvanced.cpp  testXLChartStyleAndDataTable.cpp  testXLChartsheet.cpp  testXLColumn.cpp  testXLComments.cpp  testXLCommentsRichText.cpp  testXLCompatibility.cpp  testXLConcurrent.cpp  testXLConcurrent_HighPressure.cpp  testXLConditionalFormatting.cpp  testXLConditionalFormattingAdvanced.cpp  testXLConditionalFormattingFinal.cpp  testXLCorruptFiles.cpp  testXLCrypto.cpp  testXLCryptoWrite.cpp  testXLCustomProperties.cpp  testXLDataValidation.cpp  testXLDateTime.cpp  testXLDefinedNames.cpp  testXLDocument.cpp  testXLDrawingTables.cpp  testXLEdgeCases.cpp  testXLEvalSession.cpp  testXLEvaluationContext.cpp  testXLFileSystemFailures.cpp  (+60 more)
Tests/Fixtures/: Comments_Comprehensive_Demo.xlsx  Modern_Threaded_Comments_Demo.xlsx  excelize_generated.xlsx  formula_quirks.csv  google_spreadsheets.xlsx  openpyxl_generated.xlsx  tencent_sheet.xlsx  thread_comments.xlsx
Tests/Fixtures/Generators/: generate_openpyxl.py  pyproject.toml
Tests/Fixtures/Generators/go_gen/: go.mod  main.go
